--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,3 @@
-<div class="card-columns">
-    <div *ngFor='let newRelease of newReleases' class="card">
-        <img [src]="newRelease.images[0].url" class="card-img-top" [alt]="newRelease.name">
-        <div class="card-body">
-            <h5 class="card-title">{{newRelease.name}}</h5>
-            <p class="card-text">
-                <span *ngFor='let artist of newRelease.artists' class="badge badge-pill badge-primary">{{artist.name}}</span>
-            </p>
-            <p class="card-text"><small class="text-muted">Release date: {{newRelease.release_date}}</small></p>
-        </div>
-    </div>
-</div>
+<app-loading *ngIf="loading"></app-loading>
+
+<app-cards [items]='newReleases'></app-cards>
