--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,3 +1,9 @@
-<p>
-  artist works!
-</p>
+<div class="row">
+    <div class="col-2">
+        <div *ngIf="artist.images && artist.images[0] != undefined">
+            <img [src]="artist.images[0].url" alt="">
+        </div>
+    </div>
+    <div class="col"></div>
+    <div class="col-4"></div>
+</div>
